--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ tokio = { version = "1.47.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 tower-http = { version = "0.6.6", features = ["trace"] }
+reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
+dashmap = "6.1.0"
+tower = { version = "0.5.2", features = ["util"] }
+dotenvy = "0.15.7"
