--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 /target
 .env
-peakstranding.db
-peakstranding_backup.db
-peakstranding.db-shm
-peakstranding.db-wal
-peakstranding2.db
-peakstranding_backup2.db
+peakstranding*.db*
